# glfw-cmake-starter

./: .gitignore  CMakeLists.txt  README.md
glad/: glad.c
include/glad/: glad.h
